# jira-tools

./: .gitignore  README.md  git_push_instructions.md  login_helper.py  main.py  manage.py  pyproject.toml  requirements.txt  setup.py
dashboard/: jira_logic.py  jira_logic_updates.py  urls.py  views.py  views.py.new
dashboard/static/: dashboard.css  login.css
dashboard/templates/: daily_productivity.html  daily_work_hours.html  dashboard.html  issue_productivity.html  login.html  monthly_productivity.html  timesheet_completeness.html  weekly_productivity.html
jira_work_hours/: __init__.py  cli.py  core.py  login_helper.py
jiraui/: asgi.py  settings.py  urls.py  wsgi.py
