[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jira-work-hours"
version = "0.3.1"
description = "CLI to fetch Jira work hours and productivity"
requires-python = ">=3.8"
dependencies = [
    "jira",
    "python-dateutil",
    "python-dotenv",
    "dateparser",
    "keyring"
]
readme = "README.md"
authors = [
    {name = "x0156930"}
]
license = {text = "Proprietary"}
keywords = ["jira", "productivity", "worklog", "cli"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "License :: Other/Proprietary License",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Software Development :: Bug Tracking",
    "Environment :: Console"
]

[project.urls]
Homepage = "https://github.com/x0156930/jira-tools"
Repository = "https://github.com/x0156930/jira-tools"
Issues = "https://github.com/x0156930/jira-tools/issues"

[project.scripts]
get-work-hours = "jira_work_hours.cli:main"
